Provide more precise mount(8) failure message.

PR:           19683

(cherry picked from commit 08e5f519b21dfcc7543c41c14d066b2d015fbf5c)